feat: 일단 jwt 토큰을 쿠키에 저장하고 그걸 통해 불러오고 있음

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "unified": "^11.0.5",
-    "zod": "^3.25.74"
+    "zod": "^3.25.74",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
